#F-225 In Progress Migrate from TestNG to JUnit5 and AssertJ: package util