@@ -1,11 +1,11 @@
 package com.ak.rsm.system;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.DoubleUnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.DoubleStream;
+import java.util.stream.Stream;
 
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
@@ -17,81 +17,93 @@ import com.ak.rsm.resistance.TetrapolarResistance;
 import com.ak.util.Metrics;
 import com.ak.util.Strings;
 import org.apache.commons.math3.optim.PointValuePair;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-public class InexactTetrapolarSystemTest {
-  @DataProvider(name = "tetrapolar-systems")
-  public static Object[][] tetrapolarSystems() {
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.byLessThan;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
+
+class InexactTetrapolarSystemTest {
+  static Stream<Arguments> tetrapolarSystems() {
     InexactTetrapolarSystem ts1 = new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 20.0));
     InexactTetrapolarSystem ts2 = new InexactTetrapolarSystem(0.1, new TetrapolarSystem(20.0, 10.0));
     InexactTetrapolarSystem ts3 = new InexactTetrapolarSystem(0.2, new TetrapolarSystem(20.0, 30.0));
-    return new Object[][] {
-        {ts1, ts1, true},
-        {ts1, ts2, true},
-        {ts1, ts3, false},
-        {ts1, new Object(), false},
-        {new Object(), ts1, false},
-    };
+    return Stream.of(
+        arguments(ts1, ts1, true),
+        arguments(ts1, ts2, true),
+        arguments(ts1, ts3, false),
+        arguments(ts1, new Object(), false),
+        arguments(new Object(), ts1, false)
+    );
   }
 
-  @Test(dataProvider = "tetrapolar-systems")
+  @ParameterizedTest
+  @MethodSource("tetrapolarSystems")
   @ParametersAreNonnullByDefault
-  public void testEquals(Object system1, Object system2, boolean equals) {
-    Assert.assertEquals(system1.equals(system2), equals, "%s compared with %s".formatted(system1, system2));
-    Assert.assertEquals(system1.hashCode() == system2.hashCode(), equals, "%s compared with %s".formatted(system1, system2));
-    Assert.assertNotEquals(system1, null);
+  void testEquals(Object system1, Object system2, boolean equals) {
+    assertThat(system1.equals(system2))
+        .withFailMessage("%s compared with %s", system1, system2).isEqualTo(equals);
+    assertThat(system1.hashCode() == system2.hashCode())
+        .withFailMessage("%s compared with %s", system1, system2).isEqualTo(equals);
+    assertThat(system1).isNotEqualTo(null);
   }
 
-  @DataProvider(name = "inexact-tetrapolar-systems")
-  public static Object[][] inexactTetrapolarSystems() {
-    return new Object[][] {
-        {new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 30.0))},
-        {new InexactTetrapolarSystem(0.1, new TetrapolarSystem(30.0, 10.0))},
-    };
+  static Stream<Arguments> inexactTetrapolarSystems() {
+    return Stream.of(
+        arguments(new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 30.0))),
+        arguments(new InexactTetrapolarSystem(0.1, new TetrapolarSystem(30.0, 10.0)))
+    );
   }
 
-  @Test(dataProvider = "inexact-tetrapolar-systems")
-  public void testToString(@Nonnull Object system) {
-    Assert.assertTrue(system.toString().contains("%.1f".formatted(Metrics.toMilli(0.1))), system.toString());
+  @ParameterizedTest
+  @MethodSource("inexactTetrapolarSystems")
+  void testToString(@Nonnull Object system) {
+    assertThat(system.toString()).contains("%.1f".formatted(Metrics.toMilli(0.1)));
   }
 
   @Test
-  public void testToString() {
+  void testToString() {
     TetrapolarSystem system = new TetrapolarSystem(10.0, 30.0);
     InexactTetrapolarSystem s = new InexactTetrapolarSystem(0.0, system);
-    Assert.assertEquals(s.toString(), system.toString(), s.toString());
+    assertThat(s).hasToString(system.toString());
   }
 
-  @Test(dataProvider = "inexact-tetrapolar-systems")
-  public void testAbsError(@Nonnull InexactTetrapolarSystem system) {
-    Assert.assertEquals(system.absError(), 0.1, 0.01, system.toString());
+  @ParameterizedTest
+  @MethodSource("inexactTetrapolarSystems")
+  void testAbsError(@Nonnull InexactTetrapolarSystem system) {
+    assertThat(system.absError()).withFailMessage(system::toString).isCloseTo(0.1, byLessThan(0.01));
   }
 
-  @Test(dataProvider = "inexact-tetrapolar-systems")
-  public void testGetDeltaApparent(@Nonnull InexactTetrapolarSystem system) {
-    Assert.assertEquals(system.getApparentRelativeError(), 6.0 * 0.1 / 30.0, 1.0e-6, system.toString());
+  @ParameterizedTest
+  @MethodSource("inexactTetrapolarSystems")
+  void testGetDeltaApparent(@Nonnull InexactTetrapolarSystem system) {
+    assertThat(system.getApparentRelativeError())
+        .withFailMessage(system::toString).isCloseTo(6.0 * 0.1 / 30.0, byLessThan(1.0e-6));
   }
 
-  @Test(dataProvider = "inexact-tetrapolar-systems")
-  public void testGetHMax(@Nonnull InexactTetrapolarSystem system) {
-    Assert.assertEquals(system.getHMax(1.0), 0.177 * 30.0 / StrictMath.pow(0.1 / 30.0, 1.0 / 3.0), 1.0e-1, system.toString());
+  @ParameterizedTest
+  @MethodSource("inexactTetrapolarSystems")
+  void testGetHMax(@Nonnull InexactTetrapolarSystem system) {
+    assertThat(system.getHMax(1.0))
+        .withFailMessage(system::toString).isCloseTo(0.177 * 30.0 / StrictMath.pow(0.1 / 30.0, 1.0 / 3.0), byLessThan(0.1));
   }
 
-  @DataProvider(name = "rho1rho2")
-  public static Object[][] rho1rho2() {
-    return new Object[][] {
-        {1.0, Double.POSITIVE_INFINITY},
-        {10.0, Double.POSITIVE_INFINITY},
-        {0.1, Double.POSITIVE_INFINITY},
-        {1.0, 2.0},
-        {2.0, 1.0},
-    };
+  static Stream<Arguments> rho1rho2() {
+    return Stream.of(
+        arguments(1.0, Double.POSITIVE_INFINITY),
+        arguments(10.0, Double.POSITIVE_INFINITY),
+        arguments(0.1, Double.POSITIVE_INFINITY),
+        arguments(1.0, 2.0),
+        arguments(2.0, 1.0)
+    );
   }
 
-  @Test(dataProvider = "rho1rho2")
-  public void testHMax(@Nonnegative double rho1, @Nonnegative double rho2) {
+  @ParameterizedTest
+  @MethodSource("rho1rho2")
+  void testHMax(@Nonnegative double rho1, @Nonnegative double rho2) {
     InexactTetrapolarSystem system = new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 30.0));
     DoubleUnaryOperator rhoAtHMax = sign -> (1.0 + Math.signum(sign) * system.getApparentRelativeError()) * rho1;
     PointValuePair optimize = Simplex.optimizeAll(hToL -> {
@@ -103,12 +115,13 @@ public class InexactTetrapolarSystemTest {
         },
         new Simplex.Bounds(0.0, system.getHMax(1.0) / system.system().lCC())
     );
-    Assert.assertEquals(optimize.getPoint()[0], system.getHMax(Layers.getK12(rho1, rho2)) / system.system().lCC(),
-        0.1, system.toString());
+    assertThat(optimize.getPoint()[0]).withFailMessage(system::toString)
+        .isCloseTo(system.getHMax(Layers.getK12(rho1, rho2)) / system.system().lCC(), byLessThan(0.1));
   }
 
-  @Test(dataProvider = "rho1rho2")
-  public void testHMin(@Nonnegative double rho1, @Nonnegative double rho2) {
+  @ParameterizedTest
+  @MethodSource("rho1rho2")
+  void testHMin(@Nonnegative double rho1, @Nonnegative double rho2) {
     if (Double.isFinite(rho2)) {
       InexactTetrapolarSystem system = new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 30.0));
       DoubleUnaryOperator rhoAtHMin = sign -> (1.0 + Math.signum(sign) * system.getApparentRelativeError()) * rho2;
@@ -121,27 +134,27 @@ public class InexactTetrapolarSystemTest {
           },
           new Simplex.Bounds(0.0, system.getHMax(1.0) / system.system().lCC())
       );
-      Assert.assertEquals(optimize.getPoint()[0], system.getHMin(Layers.getK12(rho1, rho2)) / system.system().lCC(),
-          0.01, system.toString());
+      assertThat(optimize.getPoint()[0]).withFailMessage(system::toString)
+          .isCloseTo(system.getHMin(Layers.getK12(rho1, rho2)) / system.system().lCC(), byLessThan(0.01));
     }
   }
 
-  @DataProvider(name = "combinations")
-  public static Object[][] combinations() {
-    return new Object[][] {
-        {
-            Arrays.asList(
+  static Stream<Arguments> combinations() {
+    return Stream.of(
+        arguments(
+            List.of(
                 new InexactTetrapolarSystem(0.1, new TetrapolarSystem(10.0, 30.0)),
                 new InexactTetrapolarSystem(0.1, new TetrapolarSystem(50.0, 30.0))
             ),
             2
-        },
-    };
+        )
+    );
   }
 
-  @Test(dataProvider = "combinations")
-  public void testCombinations(@Nonnull Collection<InexactTetrapolarSystem> systems, @Nonnegative int expected) {
+  @ParameterizedTest
+  @MethodSource("combinations")
+  void testCombinations(@Nonnull Collection<InexactTetrapolarSystem> systems, @Nonnegative int expected) {
     Collection<List<TetrapolarSystem>> c = InexactTetrapolarSystem.getMeasurementsCombination(systems);
-    Assert.assertEquals(c.size(), expected, c.stream().map(Object::toString).collect(Collectors.joining(Strings.NEW_LINE)));
+    assertThat(c).withFailMessage(c.stream().map(Object::toString).collect(Collectors.joining(Strings.NEW_LINE))).hasSize(expected);
   }
 }
